--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,12 @@ dependencies:
     sdk: flutter
   firebase_core: ^2.24.2
   firebase_auth: ^4.15.3
+  firebase_storage: ^11.6.0
   cloud_firestore: ^4.13.6
+  shared_preferences: ^2.2.2
+  image_picker: ^1.0.6
   intl: ^0.19.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
